# Furry-Player-Flutter

./: .gitignore  Cargo.toml  README.md  build.sh  release.sh
.cargo/: config.toml
.claude/plan/: furry-player.md
.github/workflows/: ci.yml  release.yml
apps/furry_android/: Cargo.toml
apps/furry_android/kotlin/: NativeLib.kt
apps/furry_android/src/: lib.rs
apps/furry_android_app/: gradle.properties  settings.gradle.kts
apps/furry_android_app/app/: build.gradle.kts  proguard-rules.pro
apps/furry_android_app/app/src/main/: AndroidManifest.xml
apps/furry_android_app/app/src/main/assets/: index.html
apps/furry_android_app/app/src/main/java/com/furry/player/: MainActivity.kt
apps/furry_cli/: Cargo.toml
apps/furry_cli/src/: main.rs
apps/furry_ffi/: Cargo.toml
apps/furry_ffi/src/: lib.rs
apps/furry_flutter/: README.md  build_android_release.sh  create_flutter_app.sh  deps_pins.txt  verify_flutter.sh
apps/furry_flutter/templates/: .gitignore  analysis_options.yaml  pubspec.yaml
apps/furry_flutter/templates/android/app/src/main/kotlin/com/furry/furry_flutter_app/: MainActivity.kt  NativeLib.kt
apps/furry_flutter/templates/lib/: furry_api.dart  furry_api_android.dart  furry_api_ffi.dart  furry_api_selector.dart  in_memory_audio_source.dart  main.dart  system_media_bridge.dart
apps/furry_flutter/templates/test/: widget_test.dart
apps/furry_gui/: Cargo.toml
apps/furry_gui/src/: main.rs  state.rs
apps/furry_gui/src/ui/: converter.rs  deck.rs  mod.rs  sidebar.rs  theme.rs
crates/furry_converter/: Cargo.toml
crates/furry_converter/src/: lib.rs
crates/furry_crypto/: Cargo.toml
crates/furry_crypto/src/: lib.rs
crates/furry_format/: Cargo.toml
crates/furry_format/src/: chunk.rs  header.rs  index.rs  lib.rs  reader.rs  writer.rs
crates/furry_player/: Cargo.toml
crates/furry_player/src/: command.rs  decoder.rs  engine.rs  lib.rs  output.rs  virtual_stream.rs
docs/: ai_prompt_android_webview_player.md  github_actions.md  release.md
docs/web_audit/: android_design_ui_mobile.html  android_design_ui_mobile.links.json  flutter_material_widgets.html  flutter_material_widgets.links.json  m3_material_io.html  m3_material_io.links.json
test_files/: test_tone.furry  test_tone_mp3.furry
tools/: extract_web_resources.py
