[package]
name = "furry_android"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
furry_crypto = { path = "../../crates/furry_crypto" }
furry_format = { path = "../../crates/furry_format" }
furry_converter = { path = "../../crates/furry_converter" }

# JNI 绑定
jni = "0.21"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"
