[package]
name = "furry_cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "furry-cli"
path = "src/main.rs"

[dependencies]
furry_crypto = { path = "../../crates/furry_crypto" }
furry_converter = { path = "../../crates/furry_converter" }
furry_format = { path = "../../crates/furry_format" }
